# vim: set noexpandtab:

2013-05-08 Steve
	* Updated default btag cut to MV1_80
	* Updated default btag SF to MV1_80
	* Updated lepton overlap dR as recommended by SUSY conveners
		* e-e overlap dR changed from 0.1 to 0.05
		* e-mu overlap dR changed from 0.1 to 0.01
	* Minor code cleanup
	* Tagging SusyNtuple-00-00-55

2013-05-07 Steve
	* Switch to usage of TFile.Open in buildSumwMap to properly handle xrootd file paths
	* Add nTrk to tau.print()

2013-05-02 Steve
	* Tagging SusyNtuple-00-00-54

2013-05-01 Steve
	* Updated TrilTrigLogic for handling extended muon eta cut
		* Using some preprocessor definitions to make code more compact
		* Matching code will require muons to be |eta| < 2.4 so that we can
		  use muons up to 2.5 in the analysis
	* Added softTerm, softTerm_etx, softTerm_ety to Susy Met class
		* These will replace the cellOut and softJet terms

2013-04-21 Anyes
	* Tweaks to TGuiUtils 

2013-04-18 Steve
	* Added const map getSumwMap method to SusyNtAna
	* Changed sumw map pointer to const in SusyNtTools getEventWeight

2013-04-17 Steve
	* Adding options to object selection methods to control the tau ID at signal tau level.
	  Default is still TauID_medium, but this allows to easily use TauID_tight.
	  Loose ID is still used at baseline level and overlap removal.
	  Affected methods:
	  	* SusyNtAna selectObjects
		* SusyNtTools getSignalObjects
		* SusyNtTools getSignalTaus
	* Minor code cleanup, reducing some unnecessary (IMO) white space.
	* Fixed file read error return statement in ChainHelper
	* Fixed "Number of events processed" in SusyNtAna dumpTimer
	* Added dumpNtupleObjects method to SusyNtAna for dumping all electrons, muons,
	  taus, and jets directly from the SusyNt

2013-04-10 Matt
	* Added functions to check upstream cuts in the event filtering is turned off.

2013-04-08 Steve
	* Added functionality to compute sumw per mcid on the fly
		* Must call buildSumwMap(chain) before processing the chain